@@ -10,6 +10,7 @@
 * gui: do not scale up avatars smaller than 32x32 on buddy list (beevvy)
 * parser: #2612 fixed: restored DATA_PATH, HOME, KADU_CONFIG Parser variables (beevvy)
 * gadu: #2620 fixed: restored downloading big avatars (beevvy)
+* qt4_docking: #2627 fixed: fixed context menu in bottom panel in Ubuntu 12.04 GNOME Classic session (beevvy)
 
 +++ version 0.12.0
 * gui: better preview in configuration window (Vogel)
